--- a/package.json
+++ b/package.json
@@ -14,12 +14,16 @@
   "dependencies": {
     "axios": "^1.13.2",
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.41.3",
     "cors": "^2.8.5",
+    "dotenv": "^16.6.1",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.2",
     "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "socket.io": "^4.8.1",
+    "streamifier": "^0.1.1",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
